--- a/ATS/Views/Home/Subscribers.cshtml
+++ b/ATS/Views/Home/Subscribers.cshtml
@@ -22,4 +22,4 @@
             </tr>
         }
     </tbody>
-</table>
+</table><a asp-controller="Home" asp-action="SubAdd">Добавить нового абонента</a>
